Update links and files.

--- a/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html
+++ b/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html
@@ -33,7 +33,7 @@
           </a>
           </li>
           <li>
-            <a href="#">Dynamiser son site web</a>
+            <a href="../03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html">Dynamiser son site web</a>
           </a>
           </li>
         </ul>
