--- a/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
+++ b/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
@@ -7,24 +7,35 @@
   <link rel="stylesheet" href="../../style.css">
   <title>Graduate développeur PHP/Symfony</title>
 </head>
-<body>
-  <header>
-    <p class="bgc-up"><a href="../02-Initiation_a_la_programmation_Javascript/initProgJSMenu.html">Retour</a></p>
+<body class="container">
+  <header class="bgc-header">
+    <nav aria-label="Fil d'ariane" class="nav-header">
+      <div>
+        <a href="../02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">
+          <img class="arrow-left vert-align" src="../../images/arrow-left.png">
+        </a>
+        <img class="arrow-left vert-align" src="../../images/arrow-right.png">
+      </div>
+      <ul class="breadcrumb">
+        <li><a href="../../../index.html">Accueil</a></li>
+        <li><a href="../../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
+        <li><a href="../02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">JavaScript</a></li>
+        <li class="active">Dynamiser son site web</li>
+      </ul>
+    </nav>
   </header>
   <main>
     <nav>
-      <section class="return" >
+      <section class="content-section">
         <h2 class="sub-title-h2">Sommaire</h2>
+        <ul class="ul-p17 li-empty">
+          <li>
+            <a href="../jquery.html">jQuery</a>
+          </a>
+          </li>
+        </ul>
       </section>
-      <ul class="ul-p17 li-empty">
-        <li>
-          <a href="progEvent.html">La programmation événementielle en Javascript</a>
-        </li>
-        <li>
-          <a href="form.html">Les formulaires HTML et JavaScript</a>
-        </li>
-      </ul>
-      </nav>
+    </nav>
   </main>
 </body>
 </html>
