Add menu for jqery.html

--- a/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
+++ b/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
@@ -27,12 +27,10 @@
   <main>
     <nav>
       <section class="content-section">
-        <h2 class="sub-title-h2">Sommaire</h2>
-        <ul class="ul-p17 li-empty">
-          <li>
-            <a href="../jquery.html">jQuery</a>
-          </a>
-          </li>
+        <h1 class="title-h1">Dynamiser son site web</h1>
+        <h2 class="title-h2">Menu</h2>
+        <ul>
+          <li><a href="../jquery.html">jQuery</a></a></li>
         </ul>
       </section>
     </nav>
