--- a/site/001-Front-end/jquery.html
+++ b/site/001-Front-end/jquery.html
@@ -29,6 +29,25 @@
     </nav>
   </header>
   <main>
+    <aside class="menu-aside">
+        <section class="content-section">
+          <h2 class="title-h2">jQuery</h2>
+          <h2 class="title-h3">Menu</h2>
+          <nav aria-label="Menu général sur jQuery">
+            <ul  class="nav-menu">
+              <li>Introduction</li>
+              <li>Documentation</li>
+              <li>Installer jQuery en minifié</li>
+              <li>Utiliser jQuery via son CDN</li>
+              <li>Vérifier l'installation de jQuery</li>
+              <li>Comment utiliser jQuery</li>
+              <li>Syntaxe générale</li>
+              <li>Les sélecteurs jQuery</li>
+              <li>Appeler une méthode</li>
+            </ul>
+          </nav>
+        </section>
+      </aside>
     <section class="content-section">
       <h1 class="title-h1">jQuery</h1>
       <article>
@@ -36,12 +55,16 @@
         <p>En 2006, 
           <a href="https://fr.wikipedia.org/wiki/John_Resig" title="Vers la page WikiPedia de John Resig">John Resig</a> à 
           lancé la librairie JavaScript libre <strong>
-            <a href="https://jquery.com/" title="Vers le site officiel de jQuery">jQuery</a></strong>.<br>
+            <a href="https://jquery.com/" title="Vers le site officiel de jQuery" target="_blank">jQuery</a></strong>.<br>
             <b>jQuery</b> permet notamment de parcourir le <b>DOM</b>, de gérer les écouteurs d'événements, de créer des 
             animations...
           </p>  
           <cite><a href="https://fr.wikipedia.org/wiki/JQuery">Vers le Wiki de jQuery</a></cite>
         </article>
+    </section>
+    <section class="content-section">
+      <h1 class="title-h1">Documentation de jQuery</h1>
+      <p><a href="https://api.jquery.com/" target="_blank" title="Lien de la documentation">Vers la documention officielle.</a></p>
     </section>
     <section class="content-section">
       <article>
@@ -66,7 +89,7 @@
       </article>
     </section>
     <section class="content-section">
-      <h2 class="title-h2">Vérifier l'installationde jQuery</h2>
+      <h2 class="title-h2">Vérifier l'installation de jQuery</h2>
       <h3 class="title-h3">Avec la fonction anonyme</h3>
       <div class="code-block">
         <code class="code-main">
