--- a/site/lexique.html
+++ b/site/lexique.html
@@ -30,6 +30,23 @@
   </header>
   <main>
     <section class="content-section">
+      <!-- B -->
+      <article>
+        <h3 class="letter-maj">B</h3>
+        <p>
+          <dl>
+            <dt id="bibliotheque"><strong>Bibliothèque</strong>
+              <dd>Une bibliothèque ou une librairie, est un ensemble de fonctions et de classes déjà codées dans un langage 
+                spécifique mis à disposition des développeurs pour agrémenter leur code. Leur apports est un gain de 
+                temps car le développeur n'a pas besoin de coder chaque fonction.
+              </dd>
+            </dt>
+          </dl>
+        </p>
+      </article>
+    </section>
+    <section class="content-section">
+      <!-- C -->
       <article>
         <h3 class="letter-maj">C</h3>
         <p>
@@ -43,6 +60,9 @@
           </dl>
         </p>
       </article>
+    </section>  
+    <section class="content-section">
+      <!-- D -->
       <article>
         <h3 class="letter-maj"><b>D</b></h3>
         <p>
@@ -52,6 +72,21 @@
           </a>
         </p>
       </article>
+    </section>
+    <section class="content-section">
+      <!-- L -->
+      <article>
+        <h3 class="letter-maj">L</h3>
+        <p>
+          <dl>
+            <dt><strong>Librairie</strong> <cite><a href="../site/001-Front-end/jquery.html#librairie">vers jquery</a></cite></dt>
+            <dd><cite>(voir <a href="#bibliotheque">Bibliothèque</a>)</cite></dd>
+          </dl>
+        </p>
+      </article>
+    </section>
+    <section class="content-section">
+      <!-- M -->
       <article>
         <h3 class="letter-maj"><b>M</b></h3>
         <p>
