--- a/site/001-Front-end/MainMenuFrontEnd.html
+++ b/site/001-Front-end/MainMenuFrontEnd.html
@@ -35,7 +35,7 @@
         </section>
         <ul>
           <li><a href="#">HTML5 et CSS3</a></li>
-          <li><a href="#mainMenuDesign.html">Design</a></li>
+          <li><a href="../006-Design/mainMenuDesign.html">Design</a></li>
           <li><a href="02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">Javascript</a></li>
         </ul>
         </nav>
