Add nav-front-end.html file.

--- a/site/006-Design/adobeXD.html
+++ b/site/006-Design/adobeXD.html
@@ -11,7 +11,7 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <a href="../001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html">
+        <a href="../001-Front-end/MainMenuFrontEnd.html">
           <img class="arrow-left vert-align" src="../images/arrow-left.png">
         </a>
         <img class="arrow-left vert-align" src="../images/arrow-right.png">
@@ -19,16 +19,25 @@
       <ul class="breadcrumb">
         <li><a href="../../index.html">Accueil</a></li>
         <li><a href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
-        <li><a href="../001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">JavaScript</a>
-        </li>
-        <li><a href="../001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html">
-          Dynamiser son site web</a>
-        </li>
-        <li class="active">jQuery</li>
+        <li class="active">Adobe XD</li>
       </ul>
     </nav>
   </header>
   <main>
+    <aside class="menu-aside">
+      <section class="content-section">
+        <h1 class="title-h1">Adobe XD</h1>
+        <h2 class="title-h3">Menu</h2>
+        <nav aria-label="Menu général sur jQuery">
+          <ul  class="nav-menu">
+            <li><a href="#adobeXD-bases">Les bases d'Adobe XD</a></li>
+            <li><a href="#">Les répétitions et positionnement</a></li>
+            <li><a href="#">L'utilisation des composants</li>
+            <li><a href="#">Le prototyping</a></li>
+          </ul>
+        </nav>
+      </section>
+    </aside>
   </main>
 </body> 
 </html>
