--- a/site/006-Design/adobeXD-bases.html
+++ b/site/006-Design/adobeXD-bases.html
@@ -18,7 +18,6 @@
       </div>
       <ul class="breadcrumb">
         <li><a href="../../index.html">Accueil</a></li>
-        <li><a href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
         <li class="active">Adobe XD</li>
       </ul>
     </nav>
@@ -30,10 +29,7 @@
         <h2 class="title-h3">Menu</h2>
         <nav aria-label="Menu général sur jQuery">
           <ul  class="nav-menu">
-            <li><a href="#adobeXD-bases">Les bases d'Adobe XD</a></li>
-            <li><a href="#">Les répétitions et positionnement</a></li>
-            <li><a href="#">L'utilisation des composants</li>
-            <li><a href="#">Le prototyping</a></li>
+            <li><a href="#"></a></li>
           </ul>
         </nav>
       </section>
