--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <a href="site/lexique.html">
           <img class="arrow-left vert-align" src="site/images/arrow-left.png">
         </a>
+        <a href="#"><img class="arrow-left vert-align" src="site/images/check.png"></a>
         <a href="site/001-Front-end/MainMenuFrontEnd.html">
           <img class="arrow-left vert-align" src="site/images/arrow-right.png">
         </a>
+        <img class="arrow-left vert-align" src="site/images/home.png">
       </div>
       <ul class="breadcrumb">
         <li class="active">Accueil</li>
