--- a/site/001-Front-end/MainMenuFrontEnd.html
+++ b/site/001-Front-end/MainMenuFrontEnd.html
@@ -14,8 +14,14 @@
         <a href="../../index.html">
           <img class="arrow-left vert-align" src="../images/arrow-left.png">
         </a>
+        <a href="../001-Front-end/nav-front-end.html">
+          <img class="arrow-left vert-align" src="../images/check.png">
+        </a>
         <a href="../005-Back-end/MainMenuBackEnd.html">
           <img class="arrow-left vert-align" src="../images/arrow-right.png" alt="Retour vers Front-end">
+        </a>
+        <a href="../../index.html">
+          <img class="arrow-left vert-align" src="../images/home.png">
         </a>
       </div>
       <ul class="breadcrumb">
