--- a/site/001-Front-end/nav-front-end.html
+++ b/site/001-Front-end/nav-front-end.html
@@ -20,7 +20,7 @@
         <a href="../005-Back-end/MainMenuBackEnd.html">
           <img class="arrow-left vert-align" src="../images/arrow-right.png" alt="Retour vers Front-end">
         </a>
-        <a href="../001-Front-end/MainMenuFrontEnd.html">
+        <a href="../../index.html">
           <img class="arrow-left vert-align" src="../images/home.png">
         </a>
       </div>
