--- a/site/005-Back-end/MainMenuBackEnd.html
+++ b/site/005-Back-end/MainMenuBackEnd.html
@@ -14,8 +14,12 @@
         <a href="../001-Front-end/MainMenuFrontEnd.html">
           <img class="arrow-left vert-align" src="../images/arrow-left.png">
         </a>
+        <img class="arrow-left vert-align" src="../images/check.png">
         <a href="../liens-utiles.html">
           <img class="arrow-left vert-align" src="../images/arrow-right.png" alt="Retour vers Front-end">
+        </a>
+        <a href="../../index.html">
+          <img class="arrow-left vert-align" src="../images/home.png">
         </a>
       </div>
       <ul class="breadcrumb">
