--- a/site/006-Design/adobeXD.html
+++ b/site/006-Design/adobeXD.html
@@ -30,10 +30,7 @@
         <h2 class="title-h3">Menu</h2>
         <nav aria-label="Menu général sur jQuery">
           <ul  class="nav-menu">
-            <li><a href="#adobeXD-bases">Les bases d'Adobe XD</a></li>
-            <li><a href="#">Les répétitions et positionnement</a></li>
-            <li><a href="#">L'utilisation des composants</li>
-            <li><a href="#">Le prototyping</a></li>
+            <li><a href="#"></a></li>
           </ul>
         </nav>
       </section>
