--- a/site/lexique.html
+++ b/site/lexique.html
@@ -15,8 +15,12 @@
         <a href="liens-utiles.html">
           <img class="arrow-left vert-align" src="../site/images/arrow-left.png">
         </a>
+        <img class="arrow-left vert-align" src="../site/images/check.png">
         <a href="../index.html">
           <img class="arrow-left vert-align" src="../site/images/arrow-right.png" alt="Retour vers Front-end">
+        </a>
+        <a href="../index.html">
+          <img class="arrow-left vert-align" src="../site/images/home.png">
         </a>
       </div>
       <ul class="breadcrumb">
