--- a/site/liens-utiles.html
+++ b/site/liens-utiles.html
@@ -14,8 +14,12 @@
         <a href="005-Back-end/MainMenuBackEnd.html">
           <img class="arrow-left vert-align" src="../site/images/arrow-left.png">
         </a>
+        <img class="arrow-left vert-align" src="../site/images/check.png">
         <a href="lexique.html">
           <img class="arrow-left vert-align" src="../site/images/arrow-right.png">
+        </a>
+        <a href="../index.html">
+          <img class="arrow-left vert-align" src="../site/images/home.png">
         </a>
       </div>
       <ul class="breadcrumb">
